2009-06-08 Sarka Todorova <sarka.todorova@cern.ch>
	* fix thickness of spacer beam
	* tagged as MuonTrackingGeometry-00-05-12

2009-06-05 Sarka Todorova <sarka.todorova@cern.ch>
	* fix calculation of span for cylinders
	* tagged as MuonTrackingGeometry-00-05-11

2009-06-05 Sarka Todorova <sarka.todorova@cern.ch>
	* adjust hardcoded partition ( cryoring leaking ...)
	* tagged as MuonTrackingGeometry-00-05-10

2009-06-04  David Rousseau  <droussea@lxbuild084.cern.ch>
	* python/ConfiguredMuonTrackingGeometry.py : no more printout of Configurable 
	* tagged as MuonTrackingGeometry-00-05-09
	
2009-06-04 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfixes (averaged layer material, span )
	* tagged as MuonTrackingGeometry-00-05-07

2009-05-12 Sarka Todorova <sarka.todorova@cern.ch>
	* release blended material objects from memory (option)
	* tagged as MuonTrackingGeometry-00-05-06

2009-05-07 Sarka Todorova <sarka.todorova@cern.ch>
	* MGM/MuonReadoutGeometry dependence
	* tagged as MuonTrackingGeometry-00-05-05

2009-05-04 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix 
	* tagged as MuonTrackingGeometry-00-05-04

2009-04-27 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leak fix 
	* tagged as MuonTrackingGeometry-00-05-03

2009-04-08 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in CSC identification 
	* tagged as MuonTrackingGeometry-00-05-02

2009-04-06 Sarka Todorova <sarka.todorova@cern.ch>
	* unidentified RPC stations (partially) fixed (for GEO) 
	* tagged as MuonTrackingGeometry-00-05-01

2009-04-03 Andreas Salzburger <Andreas.Salzburger -at- cern.ch>
        * noField option introduced
        * memory defragmentation fixes (no dynamic allocation)
        * MuonTrackingGeometry-00-05-00

2009-04-02 Sarka Todorova <sarka.todorova@cern.ch>
	* CSC stations fixed (for GEO) 
	* tagged as MuonTrackingGeometry-00-04-26

2009-03-23 Sarka Todorova <sarka.todorova@cern.ch>
	* add switch for multilayer representation 
	* tagged as MuonTrackingGeometry-00-04-24/25
