@@ -95,7 +95,7 @@ namespace Muon {
       bool                                m_buildEndcap;
       bool                                m_buildCsc;
       bool                                m_buildTgc;  
-      bool                                m_identifyActive;
+      bool                                m_resolveActiveLayers;
     };
 
 
